src/OpenCvSharpExtern/imgproc.h

CVAPI(void) imgproc_approxPolyDP_InputArray(cv::_InputArray *curve, cv::_OutputArray *approxCurve, double epsilon, int closed)
{
	cv::approxPolyDP(*curve, *approxCurve, epsilon, closed != 0);
}
CVAPI(void) imgproc_approxPolyDP_Point(cv::Point *curve, int curveLength, std::vector<cv::Point> **approxCurve, double epsilon, int closed)
{
	cv::Mat_<cv::Point> curveMat(curveLength, 1, curve);
	*approxCurve = new std::vector<cv::Point>;
	cv::approxPolyDP(curveMat, **approxCurve, epsilon, closed != 0);
}
CVAPI(void) imgproc_approxPolyDP_Point2f(cv::Point2f *curve, int curveLength, std::vector<cv::Point2f> **approxCurve, double epsilon, int closed)
{
	cv::Mat_<cv::Point2f> curveMat(curveLength, 1, curve);
	*approxCurve = new std::vector<cv::Point2f>;
	cv::approxPolyDP(curveMat, **approxCurve, epsilon, closed != 0);
}
CVAPI(double) imgproc_arcLength_InputArray(cv::_InputArray *curve, int closed)
{
	return cv::arcLength(*curve, closed != 0);
}
CVAPI(double) imgproc_arcLength_Point(cv::Point *curve, int curveLength, int closed)
{
	cv::Mat_<cv::Point> curveMat(curveLength, 1, curve);
	return cv::arcLength(curveMat, closed != 0);
}
CVAPI(double) imgproc_arcLength_Point2f(cv::Point2f *curve, int curveLength, int closed)
{
	cv::Mat_<cv::Point2f> curveMat(curveLength, 1, curve);
	return cv::arcLength(curveMat, closed != 0);
}
CVAPI(CvRect) imgproc_boundingRect_InputArray(cv::_InputArray *curve)
{
	return cv::boundingRect(*curve);
}
CVAPI(CvRect) imgproc_boundingRect_Point(cv::Point *curve, int curveLength)
{
	cv::Mat_<cv::Point> curveMat(curveLength, 1, curve);
	return cv::boundingRect(curveMat);
}
CVAPI(CvRect) imgproc_boundingRect_Point2f(cv::Point2f *curve, int curveLength)
{
	cv::Mat_<cv::Point2f> curveMat(curveLength, 1, curve);
	return cv::boundingRect(curveMat);
}
CVAPI(double) imgproc_contourArea_InputArray(cv::_InputArray *contour, int oriented)
{
	return cv::contourArea(*contour, oriented != 0);
}
CVAPI(double) imgproc_contourArea_Point(cv::Point *contour, int contourLength, int oriented)
{
	cv::Mat_<cv::Point> contourMat(contourLength, 1, contour);
	return cv::contourArea(contourMat, oriented != 0);
}
CVAPI(double) imgproc_contourArea_Point2f(cv::Point2f *contour, int contourLength, int oriented)
{
	cv::Mat_<cv::Point2f> contourMat(contourLength, 1, contour);
	return cv::contourArea(contourMat, oriented != 0);
}
CVAPI(CvBox2D) imgproc_minAreaRect_InputArray(cv::_InputArray *points)
{
	return cv::minAreaRect(*points);
}
CVAPI(CvBox2D) imgproc_minAreaRect_Point(cv::Point *points, int pointsLength)
{
	cv::Mat_<cv::Point> pointsMat(pointsLength, 1, points);
	return cv::minAreaRect(pointsMat);
}
CVAPI(CvBox2D) imgproc_minAreaRect_Point2f(cv::Point2f *points, int pointsLength)
{
	cv::Mat_<cv::Point2f> pointsMat(pointsLength, 1, points);
	return cv::minAreaRect(pointsMat);
}
CVAPI(void) imgproc_minEnclosingCircle_InputArray(cv::_InputArray *points, cv::Point2f *center, float *radius)
{
	cv::Point2f center0;
	float radius0;
	cv::minEnclosingCircle(*points, center0, radius0);
	*center = center0;
	*radius = radius0;
}
CVAPI(void) imgproc_minEnclosingCircle_Point(cv::Point *points, int pointsLength, cv::Point2f *center, float *radius)
{
	cv::Mat_<cv::Point> pointsMat(pointsLength, 1, points);
	cv::Point2f center0;
	float radius0;
	cv::minEnclosingCircle(pointsMat, center0, radius0);
	*center = center0;
	*radius = radius0;
}
CVAPI(void) imgproc_minEnclosingCircle_Point2f(cv::Point2f *points, int pointsLength, cv::Point2f *center, float *radius)
{
	cv::Mat_<cv::Point2f> pointsMat(pointsLength, 1, points);
	cv::Point2f center0;
	float radius0;
	cv::minEnclosingCircle(pointsMat, center0, radius0);
	*center = center0;
	*radius = radius0;
}
CVAPI(double) imgproc_matchShapes_InputArray(cv::_InputArray *contour1, cv::_InputArray *contour2, int method, double parameter)
{
	return cv::matchShapes(*contour1, *contour2, method, parameter);
}
CVAPI(double) imgproc_matchShapes_Point(cv::Point *contour1, int contour1Length, cv::Point *contour2, int contour2Length, 
	int method, double parameter)
{
	cv::Mat_<cv::Point> contour1Mat(contour1Length, 1, contour1);
	cv::Mat_<cv::Point> contour2Mat(contour2Length, 1, contour2);
	return cv::matchShapes(contour1Mat, contour2Mat, method, parameter);
}
CVAPI(void) imgproc_convexHull_InputArray(cv::_InputArray *points, cv::_OutputArray *hull, int clockwise, int returnPoints)
{
	cv::convexHull(*points, *hull, clockwise != 0, returnPoints != 0);
}
CVAPI(void) imgproc_convexHull_Point_ReturnsPoints(cv::Point *points, int pointsLength, std::vector<cv::Point> **hull, int clockwise)
{
	cv::Mat_<cv::Point> pointsMat(pointsLength, 1, points);
	*hull = new std::vector<cv::Point>;
	cv::convexHull(pointsMat, **hull, clockwise != 0, true);
}
CVAPI(void) imgproc_convexHull_Point2f_ReturnsPoints(cv::Point2f *points, int pointsLength, std::vector<cv::Point2f> **hull, int clockwise)
{
	cv::Mat_<cv::Point2f> pointsMat(pointsLength, 1, points);
	*hull = new std::vector<cv::Point2f>;
	cv::convexHull(pointsMat, **hull, clockwise != 0, true);
}
CVAPI(void) imgproc_convexHull_Point_ReturnsIndices(cv::Point *points, int pointsLength, std::vector<int> **hull, int clockwise)
{
	cv::Mat_<cv::Point> pointsMat(pointsLength, 1, points);
	*hull = new std::vector<int>;
	cv::convexHull(pointsMat, **hull, clockwise != 0, false);
}
CVAPI(void) imgproc_convexHull_Point2f_ReturnsIndices(cv::Point2f *points, int pointsLength, std::vector<int> **hull, int clockwise)
{
	cv::Mat_<cv::Point2f> pointsMat(pointsLength, 1, points);
	*hull = new std::vector<int>;
	cv::convexHull(pointsMat, **hull, clockwise != 0, false);
}
CVAPI(void) imgproc_convexityDefects_InputArray(cv::_InputArray *contour, cv::_InputArray *convexHull, 
										   cv::_OutputArray *convexityDefects)
{
	cv::convexityDefects(*contour, *convexHull, *convexityDefects);
}
CVAPI(void) imgproc_convexityDefects_Point(cv::Point *contour, int contourLength, int *convexHull, int convexHullLength, 
	std::vector<cv::Vec4i> **convexityDefects)
{
	cv::Mat_<cv::Point> contourMat(contourLength, 1, contour);
	cv::Mat_<int> convexHullMat(convexHullLength, 1,  convexHull);
	*convexityDefects = new std::vector<cv::Vec4i>;
	cv::convexityDefects(contourMat, convexHullMat, **convexityDefects);
}
CVAPI(void) imgproc_convexityDefects_Point2f(cv::Point2f *contour, int contourLength, int *convexHull, int convexHullLength,
	std::vector<cv::Vec4i> **convexityDefects)
{
	cv::Mat_<cv::Point2f> contourMat(contourLength, 1, contour);
	cv::Mat_<int> convexHullMat(convexHullLength, 1, convexHull);
	*convexityDefects = new std::vector<cv::Vec4i>;
	cv::convexityDefects(contourMat, convexHullMat, **convexityDefects);
}
CVAPI(int) imgproc_isContourConvex_InputArray(cv::_InputArray *contour)
{
	return cv::isContourConvex(*contour) ? 1 : 0;
}
CVAPI(int) imgproc_isContourConvex_Point(cv::Point *contour, int contourLength)
{
	cv::Mat_<cv::Point> contourMat(contourLength, 1, contour);
	return cv::isContourConvex(contourMat) ? 1 : 0;
}
CVAPI(int) imgproc_isContourConvex_Point2f(cv::Point2f *contour, int contourLength)
{
	cv::Mat_<cv::Point2f> contourMat(contourLength, 1, contour);
	return cv::isContourConvex(contourMat) ? 1 : 0;
}
CVAPI(float) imgproc_intersectConvexConvex_InputArray(cv::_InputArray *p1, cv::_InputArray *p2,
													  cv::_OutputArray *p12, int handleNested)
{
	return cv::intersectConvexConvex(*p1, *p2, *p12, handleNested != 0);
}
CVAPI(float) imgproc_intersectConvexConvex_Point(cv::Point *p1, int p1Length, cv::Point *p2, int p2Length,
	std::vector<cv::Point> **p12, int handleNested)
{
	cv::Mat_<cv::Point> p1Vec(p1Length, 1, p1);
	cv::Mat_<cv::Point> p2Vec(p2Length, 1, p2);
	*p12 = new std::vector<cv::Point>;
	return cv::intersectConvexConvex(p1Vec, p2Vec, **p12, handleNested != 0);
}
CVAPI(float) imgproc_intersectConvexConvex_Point2f(cv::Point2f *p1, int p1Length, cv::Point2f *p2, int p2Length,
	std::vector<cv::Point2f> **p12, int handleNested)
{
	cv::Mat_<cv::Point2f> p1Vec(p1Length, 1, p1);
	cv::Mat_<cv::Point2f> p2Vec(p2Length, 1, p2);
	*p12 = new std::vector<cv::Point2f>;
	return cv::intersectConvexConvex(p1Vec, p2Vec, **p12, handleNested != 0);
}
CVAPI(CvBox2D) imgproc_fitEllipse_InputArray(cv::_InputArray *points)
{
	return cv::fitEllipse(*points);
}
CVAPI(CvBox2D) imgproc_fitEllipse_Point(cv::Point *points, int pointsLength)
{
	cv::Mat_<cv::Point> pointsVec(pointsLength, 1, points);
	return cv::fitEllipse(pointsVec);
}
CVAPI(CvBox2D) imgproc_fitEllipse_Point2f(cv::Point2f *points, int pointsLength)
{
	cv::Mat_<cv::Point2f> pointsVec(pointsLength, 1, points);
	return cv::fitEllipse(pointsVec);
}
CVAPI(void) imgproc_fitLine_InputArray(cv::_InputArray *points, cv::_OutputArray *line, 
									   int distType, double param, double reps, double aeps)
{
	cv::fitLine(*points, *line, distType, param, reps, aeps);
}
CVAPI(void) imgproc_fitLine_Point(cv::Point *points, int pointsLength, float *line, int distType,
	double param, double reps, double aeps)
{
	cv::Mat_<cv::Point> pointsVec(pointsLength, 1, points);
	cv::Mat_<float> lineVec(4, 1, line);
	cv::fitLine(pointsVec, lineVec, distType, param, reps, aeps);
}
CVAPI(void) imgproc_fitLine_Point2f(cv::Point2f *points, int pointsLength, float *line, int distType,
	double param, double reps, double aeps)
{
	cv::Mat_<cv::Point2f> pointsVec(pointsLength, 1, points);
	cv::Mat_<float> lineVec(4, 1, line);
	cv::fitLine(pointsVec, lineVec, distType, param, reps, aeps);
}
CVAPI(void) imgproc_fitLine_Point3i(cv::Point3i *points, int pointsLength, float *line, int distType,
	double param, double reps, double aeps)
{
	cv::Mat_<cv::Point3i> pointsVec(pointsLength, 1, points);
	cv::Mat_<float> lineVec(6, 1, line);
	cv::fitLine(pointsVec, lineVec, distType, param, reps, aeps);
}
CVAPI(void) imgproc_fitLine_Point3f(cv::Point3f *points, int pointsLength, float *line, int distType,
	double param, double reps, double aeps)
{
	cv::Mat_<cv::Point3f> pointsVec(pointsLength, 1, points);
	cv::Mat_<float> lineVec(6, 1, line);
	cv::fitLine(pointsVec, lineVec, distType, param, reps, aeps);
}
CVAPI(double) imgproc_pointPolygonTest_InputArray(cv::_InputArray *contour, cv::Point2f pt, int measureDist)
{
	return cv::pointPolygonTest(*contour, pt, measureDist != 0);
}
CVAPI(double) imgproc_pointPolygonTest_Point(cv::Point *contour, int contourLength, cv::Point2f pt, int measureDist)
{
	cv::Mat_<cv::Point> contourVec(contourLength, 1, contour);
	return cv::pointPolygonTest(contourVec, pt, measureDist != 0);
}
CVAPI(double) imgproc_pointPolygonTest_Point2f(cv::Point2f *contour, int contourLength, cv::Point2f pt, int measureDist)
{
	cv::Mat_<cv::Point2f> contourVec(contourLength, 1, contour);
	return cv::pointPolygonTest(contourVec, pt, measureDist != 0);
}